   options or set options for any descriptor. [MG]

Functions:
 * colors() returns a list of all known color names known by PennMUSH. [GM]

Minor changes:
 * The meaning of the COLOR flag has been restored. ANSI flag once again 
   means only highlight is supported, while COLOR means all ANSI 8 colors
   (8*2 including highlight), flash, invert, etc are supported. [GM]

Version 1.8.5 patchlevel 1                                 May 15, 2012

Hardcode:
 * The local_data_clone() function now receives an additional argument,
   which specifies whether @clone/preserve was used. You'll need to either
   update the definition of local_data_clone in src/local.c from the one in 
   src/local.dst or, if you've made no changes to src/local.c, just remove
   src/local.c and it'll be rebuilt automatically. [MG]
 * The orator variable (defined in game.c), for tracking the last object
   which made sound, has been deprecated, and may soon be removed; don't use
   it. Just pass the correct dbrefs to the notify*() functions if something 
   talks. [MG]
 * Several of the notify_*() family of functions, and the do_*emit()
   functions now take an extra arg, for properly tracking both the executor
   and the speaker when spoofing (@pemit/spoof, etc). [MG]

Deprecation:
 * @emit/room and @doing/header have been deprecated. Use @lemit and @poll,
   respectively, instead. [MG]

Major changes:
 * Built-in attributes are now stored in the database. This means that
   @attribute no longer needs to be in an @startup, as it will persist
   across reboots and shutdowns. The attribute_alias option in .cnf
   files is now deprecated as a result. [MG]
 * The database now uses a new versioning scheme (alongside the old
   one, for backwards compatability), using incrementing integers
   instead of bitwise flags. Ideas by [GM] and Covenent. [MG]

Minor changes:
 * Logged messages now have events in the LOG tree. Suggested by
   Padraic. [SW]